Fixed scrollbar and global font

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Poppins:wght@300;400;500&family=Roboto:ital,wght@0,100;0,400;0,900;1,300;1,400;1,500;1,700&family=Young+Serif&display=swap");
 
 @layer base {
   :root {
@@ -79,6 +79,23 @@
 
 .gradient-bg:hover{
   background: linear-gradient(to right, #f09819, #ff512f);
+}
+.myscrollbar::-webkit-scrollbar {
+  width: 5px !important;
+  border-radius: 5px;
+}
+
+.myscrollbar::-webkit-scrollbar-thumb {
+  width: 5px !important;
+  background-color: #a8a8a8;
+  border-radius: 5px;
+}
+
+.myscrollbar::-webkit-scrollbar-track {
+  width: 5px !important;
+}
+*{
+  font-family: "Poppins", sans-serif;
 }
  
 /* @layer base {
